--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -55,6 +55,22 @@
   &-tw {
     background: url(../img/social-media-ico.png) no-repeat -29px 0;
   }
+
+  &-is-check,
+  &-is-uncheck {
+    height: 13px;
+    width: 13px;
+  }
+
+  &-is-check {
+    background: url(../img/ico-big-check.png) no-repeat 0 0;
+    background-size: 13px 13px;
+  }
+
+  &-is-uncheck {
+    background: url(../img/input-uncheck.png) no-repeat 0 0;
+  }
+
 }
 
 .bg-white {
@@ -369,11 +385,12 @@
       background-position: -657px -97px;
 
       &-big {
-        width: 21px;
-        height: 21px;
+        width: 22px;
+        height: 22px;
+        background-position: -615px -67px;
 
         &-fill {
-          background-position: -591px -67px
+          background-position: -590px -67px
         }
       }
 
@@ -402,11 +419,13 @@
       width: 24px;
       height: 24px;
       background-position: -251px -205px;
+      cursor: pointer;
     }
 
     &-down-circle-arrow {
       width: 24px;
       height: 24px;
+      cursor: pointer;
       background-position: -279px -204px;
     }
 
