--- a/app/jade/hotel-detail.jade
+++ b/app/jade/hotel-detail.jade
@@ -149,7 +149,11 @@ block main
                 i.ico.ico-rating.ico-rating-big.ico-rating-big-fill
               span.review-count.block.text-yellow.text-right 1234 Reviews
 
-          .choose-room.m-t-xl.b-dashed-t-gray
+          .hotel-photo-gallery.b-dashed-b-gray
+
+            include helpers/hotel-photo-gallery
+
+          .choose-room.m-t-xl
             h3.head-title.text-c-l.text-rounded.m-b-lg.m-t-lg
               | Choose&nbsp;
               span.text-orange Your Rooms
