--- a/app/less/web/hotels.less
+++ b/app/less/web/hotels.less
@@ -606,3 +606,105 @@
   }
 
 }
+
+
+.hotel-photo-gallery {
+  height: 540px;
+  width: 682px;
+  margin-top: 30px;
+
+  #gallery-slider {
+    .slides {
+      .wrapper-md {
+        position: absolute;
+        z-index: 1000;
+        width: 215px;
+        height: 185px;
+        background: #fcbc56;
+        top: 0;
+        right: 0;
+
+        a {
+          color: #cc6600;
+          border-bottom: 1px solid #cc6600;
+        }
+      }
+
+      img {
+        display: block;
+        position: relative;
+        width: 680px;
+        height: 455px;
+      }
+    }
+  }
+
+  #gallery-slider-carousel {
+    margin-top: 12px;
+    padding: 0 20px;
+
+    .slides {
+      img {
+        width: 60px;
+        height: 60px;
+        cursor: pointer;
+        display: block;
+      }
+
+      li {
+        width: 60px;
+        height: 60px;
+        margin-right: 12px;
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        &.flex-active-slide {
+          box-shadow: inset 0 0 0 3px #f39d12;
+          img {
+            padding: 3px;
+          }
+        }
+      }
+    }
+
+    .flex-direction-nav {
+
+      a {
+        opacity: 1;
+        text-indent: -9999px;
+        overflow: hidden;
+
+        &:before {
+          display: none;
+        }
+      }
+      .flex-disabled {
+        opacity: 1 !important;
+      }
+
+      .flex-prev,
+      .flex-next {
+        height: 24px;
+        width: 24px;
+        margin-top: -12px;
+
+        &:hover,
+        &:focus,
+        &:active {
+          outline: 0;
+        }
+      }
+
+      .flex-prev {
+        left: -4px;
+        background: url(../img/arrow-left.png) no-repeat 0 0;
+      }
+      .flex-next {
+        right: -4px;
+        background: url(../img/arrow-right.png) no-repeat 0 0;
+      }
+    }
+  }
+}
