--- a/app/less/web/hotels.less
+++ b/app/less/web/hotels.less
@@ -263,6 +263,10 @@
         width: 315px !important
       }
 
+      &.pricing {
+        width: 127px;
+      }
+
       &.rating {
         &.rating-number {
           .text-primary {
@@ -412,7 +416,7 @@
         }
 
         &.pricing {
-          width: 135px;
+          width: 139px;
           background: #f8f8f8;
 
           .no-pricing {
